# open-margin

./: README.md  pyproject.toml  requirements.txt
src/openmargin/: auxiliary.py  init.py  risk.py
